fix: fix side rail actions and badges off center

--- a/packages/esm-patient-common-lib/src/siderail-nav-button/siderail-nav-button.scss
+++ b/packages/esm-patient-common-lib/src/siderail-nav-button/siderail-nav-button.scss
@@ -38,13 +38,13 @@
   .countTag {
     position: absolute;
     font-size: 10px;
-    text-align: center;
+    text-align: right;
     color: $ui-01;
     background-color: $danger;
     padding: 0 4px;
     border-radius: 50%;
-    top: -10px;
-    right: -10px;
+    top: -14px;
+    right: -12px;
   }
 
   .interruptedTag {
